add clone report from template and fix bug for view remove and add default report report_tab metric name

--- a/public/401.html
+++ b/public/401.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>出错了！ (401)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>出错了！您无权查看此页面</h1>
+    <p>如需访问，请联系项目管理员.</p>
   </div>
 </body>
 </html>
